[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "setuptools-git-versioning"
]
build-backend = "setuptools.build_meta"

[project]
name = "d4m"
dynamic = ["version"]
authors = [
    { name = "Brod8362", email = "brod8362@gmail.com" },
]
description = "Project Diva MegaMix+ Mod Manager"
readme = "README.md"
license = {file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "vdf >= 3.4",
    "toml >= 0.10.2",
    "colorama >= 0.4.5",
    "requests >= 2.27.1",
    "simple-term-menu >= 1.5.0",
    "packaging >= 21.3",
    "PySide6 >= 6.2.4",
    "libarchive >= 0.4.7",
    "appdirs >= 1.4.4"
]

[project.urls]
"Source Code" = "https://github.com/Brod8362/d4m"
"Issues" = "https://github.com/Brod8362/d4m/issues"

[project.scripts]
d4m = "d4m.tui:main"
d4m-gui = "d4m.gui:main"

[tool.setuptools.package-data]
"d4m.res" = ["*.svg","*.png"]

[tool.setuptools-git-versioning]
enabled = true
dirty_template = "{tag}.dev+{ccount}"